--- a/package.json
+++ b/package.json
@@ -1,18 +1,20 @@
 {
-  "type":"module",
+  "type": "module",
   "name": "tpfinal",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"node server.js",
-    "dev":"nodemon server.js"
+    "start": "node --env-file .env server.js",
+    "dev": "nodemon --env-file .env server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.21.1"
+    "express": "^4.21.1",
+    "mysql2": "^3.11.3",
+    "sequelize": "^6.37.4"
   }
 }
