agregacion de libro en query de ejemplares

--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "name": "tpfinal",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node --env-file .env server.js",
-    "dev": "nodemon --env-file .env server.js"
+    "start": "node --env-file .env index.js",
+    "dev": "nodemon --env-file .env index.js"
   },
   "keywords": [],
   "author": "",
